--- a/utils/load_data.ipynb
+++ b/utils/load_data.ipynb
@@ -61,6 +61,41 @@
     "\n",
     "# print(x_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5b3c9d23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "已保存为 california_housing.csv，标签列为 target\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('../datasets/housing.csv')\n",
+    "# 假设标签列为 'median_house_value'\n",
+    "X = df.drop(['median_house_value', \"ocean_proximity\"], axis=1)\n",
+    "\n",
+    "y = df['median_house_value']\n",
+    "\n",
+    "# 合并特征和标签\n",
+    "df_out = pd.concat([X, y.rename('target')], axis=1)\n",
+    "df_out.to_csv('california_housing.csv', index=False)\n",
+    "print(\"已保存为 california_housing.csv，标签列为 target\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac1e20e5",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
