change cnn / add lgr

--- a/data_split.ipynb
+++ b/data_split.ipynb
@@ -67,7 +67,7 @@
     "# 使用当前脚本路径拼接相对路径\n",
     "script_dir = os.getcwd()\n",
     "root_cifar = os.path.join(script_dir, 'datasets/cifar10')  # 原始数据(同mnist那种乱序结构)\n",
-    "output_dir = os.path.join(script_dir, 'datasets/cnn/cifar-10')  # 转换后输出路径(同CINIC那种按类的结构)\n",
+    "output_dir = os.path.join(script_dir, 'datasets/cifar-10')  # 转换后输出路径(同CINIC那种按类的结构)\n",
     "\n",
     "convert_cifar10_to_imagefolder(root_cifar, output_dir)"
    ]
